Updating package JS to fix issues

--- a/Salon/package.json
+++ b/Salon/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
+  "engine": {
+    "node": "16.17.1",
+    "npm": "8.x"
+  }, 
   "scripts": {
     "start": "node server/server.js --ignore client",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
