--- a/Salon/package.json
+++ b/Salon/package.json
@@ -6,7 +6,7 @@
   "engine": {
     "node": "16.17.1",
     "npm": "8.x"
-  }, 
+  },
   "scripts": {
     "start": "node server/server.js --ignore client",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
@@ -17,7 +17,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "apollo-server-express": "^3.11.1",
     "concurrently": "^5.3.0",
-    "apollo-server-express": "^3.11.1"
+    "react-router-dom": "^6.8.0"
   }
 }
