--- a/Salon/client/package.json
+++ b/Salon/client/package.json
@@ -4,19 +4,34 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "appointment-picker": "^2.0.0",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "style-loader": "^0.23.1",
+    "uglify-es": "^3.2.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "uglify": "uglifyjs ./js/appointment-picker.js -c -m -o ./js/appointment-picker.min.js",
+    "css": "node-sass css/appointment-picker.scss css/appointment-picker.css",
+    "start": "react-scripts start webpack-dev-server --config ./webpack.config.js --mode development --open",
+    "build": "react-scripts build npm run uglify && npm run css && webpack -p --env=prod --config ./webpack.prod.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
