--- a/Salon/client/package.json
+++ b/Salon/client/package.json
@@ -14,18 +14,16 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "style-loader": "^0.23.1",
-    "uglify-es": "^3.2.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
+    "bootstrap": "^5.2.3"
   },
   "scripts": {
     "uglify": "uglifyjs ./js/appointment-picker.js -c -m -o ./js/appointment-picker.min.js",
     "css": "node-sass css/appointment-picker.scss css/appointment-picker.css",
-    "start": "react-scripts start webpack-dev-server --config ./webpack.config.js --mode development --open",
-    "build": "react-scripts build npm run uglify && npm run css && webpack -p --env=prod --config ./webpack.prod.config.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
