--- a/Salon/server/package.json
+++ b/Salon/server/package.json
@@ -18,10 +18,14 @@
   "dependencies": {
     "apollo-server-express": "^3.6.1",
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "nodemailer": "^6.9.1",
     "stripe": "^8.67.0"
   },
   "devDependencies": {
