--- a/Salon/server/.env
+++ b/Salon/server/.env
@@ -1,3 +1,8 @@
 MONGODB_URI = 
 
 SUPER_SECRET_KEY={{{YOUR SECRET}}}
+
+# Node Mailer
+EMAIL_HOST=smtp-mail.outlook.com
+EMAIL_USER=BizCCsSalon@outlook.com
+EMAIL_PASS=3-kP4n3bB%wA
