--- a/Salon/client/package.json
+++ b/Salon/client/package.json
@@ -2,6 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
+  
   "dependencies": {
     "@apollo/client": "^3.7.4",
     "@stripe/stripe-js": "github:stripe/stripe-js",
