add-delete services works

--- a/Salon/server/package.json
+++ b/Salon/server/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "seed": "node seeds/seed.js",
+    "seed": "node seeders/seeds.js",
     "watch": "nodemon server.js"
   },
   "keywords": [],
