--- a/Salon/client/package.json
+++ b/Salon/client/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
