--- a/Salon/client/package.json
+++ b/Salon/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
-  
   "dependencies": {
     "@apollo/client": "^3.7.4",
     "@stripe/stripe-js": "github:stripe/stripe-js",
@@ -17,6 +16,7 @@
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
